--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,12 @@
     <img src="https://static.begin.app/starter/begin-logo.svg" style="max-width: 250px" class="center-text">
     <div style="margin-bottom: 24px">
       <h1 style="margin-bottom: 24px" class="center-text">
-        Howdy, Beginner!
+        Let's break stuff
       </h1>
       <p style="margin-bottom: 8px">
-        Get started by editing this file at:
+        Making edits.
       </p>
-      <code>
-        public/index.html
-      </code>
-    </div>
-    <div>
-      <p style="margin-bottom: 8px">
-        View documentation at:
-      </p>
-      <a class="link" href="https://docs.begin.com" target="_blank">https://docs.begin.com</a>
     </div>
   </div>
-  <script type="module" src="index.js"></script>
 </body>
 </html>
