--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         Let's break stuff
       </h1>
       <p style="margin-bottom: 8px">
-        Making edits.
+        Did it break yet?
       </p>
     </div>
   </div>
